# net.sourceforge.freetype-ftjam

./: .gitignore  build_ubuntu_x86_64.sh  build_windows_x86.sh  build_windows_x86_64.sh
.github/workflows/: main.yml
copy_over/: CMakeLists.txt
copy_over/cmake/tests/: mingw_dll_dependencies.py
patches/: 001_add_missing_includes.diff  002_fix_type_for_exec_call.diff  003_printf_precision_must_be_int.diff  004_add_long_qualifier_to_printf.diff  005_use_ptrdiff_t_for_types_converted_to_HANDLE.diff  006_cast_type_for_spawnvp.diff
